# roadmap-linter

./: MANIFEST.txt  README.md  pyproject.toml  streamlit_app.py
demo/sample_reports/: sample_report.json
docs/: abstention-policy.md  ambiguity-rubric.md  contradiction-taxonomy.md  critique-and-fixes.md  demo-script.md  portfolio-presentation-notes.md  severity-model.md
eval/goldens/: doc_sets.jsonl
eval/rubrics/: abstention.md  contradiction_quality.md
examples/: okr_sample.md  prd_sample.md  roadmap_sample.md  sparse_prd_sample.md
schemas/: claim.schema.json  contradiction.schema.json  lint_report.schema.json
src/roadmap_linter/: __init__.py  cli.py  eval_runner.py  logic.py  utils.py
tests/: test_linter.py
